--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Aula-25-05-2017-Exercicio1/lib/Oracle Driver.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Tiago/workspace/Aula-25-05-2017-Exercicio1/lib/reader.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
